--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-query": "^3.38.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
